optimizing user apis and drafting out models
