# swagger.yaml
@@ -7,10 +7,10 @@ info:
   contact: { email: ammuftau74@gmail.com }
 
 servers:
-  - url: https://pipu-pro.onrender.com/api/v1
-    description: This is the original api URL
   - url: http://localhost:9000/api/v1
     description: This is my local Server
+  - url: https://pipu-pro.onrender.com/api/v1
+    description: This is the original api URL
 
 components:
   securitySchemes:
@@ -40,16 +40,16 @@ paths:
               properties:
                 name:
                   type: string
-                  example: user.email@domain.com
+                  example: john
                 email:
                   type: string
-                  example: user.email@domain.com
+                  example: abc@gmail.com
                 password:
                   type: string
                   example: test@123
             example:
               name: 'john'
-              email: user.email@domain.com
+              email: abc@gmail.com
               password: test@123
       responses:
         '201':
@@ -1844,29 +1844,185 @@ paths:
                       totalPages: 50
                     message: user fetched successfully
                     success: true
+  /guest/register:
+    post:
+      tags:
+        - 🔐 Authentication
+      summary: Register guest
+      description: >-
+        The API endpoint allows users to register or signup to create their
+        accounts.
+      operationId: registerGuest
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                firstname:
+                  type: string
+                  example: john
+                lastname:
+                  type: string
+                  example: david
+                email:
+                  type: string
+                  example: abc@gmail.com
+                password:
+                  type: string
+                  example: test@123
+            example:
+              firdtname: 'john'
+              lastname: 'david'
+              email: abc@gmail.com
+              password: test@123
+      responses:
+        '201':
+          description: Register user
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '500'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:09 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1f4-1q38Sbu25p0UVmeYQmrEv2VrgPg"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '495'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '772'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  user:
+                    type: object
+                    properties:
+                      __v:
+                        type: number
+                        example: 0
+                      _id:
+                        type: string
+                        example: 649e795264e7dba29b726936
+                      avatar:
+                        type: object
+                        properties:
+                          _id:
+                            type: string
+                            example: 649e795264e7dba29b726935
+                          url:
+                            type: string
+                            example: https://via.placeholder.com/200x200.png
+                      createdAt:
+                        type: string
+                        example: '2023-06-30T06:42:26.163Z'
+                      email:
+                        type: string
+                        example: user.email@domain.com
+                      name:
+                        type: string
+                        example: john
+                      phone:
+                        type: string
+                        example: '+23491234567'
+                      isVerified:
+                        type: boolean
+                        example: false
+                      loginType:
+                        type: string
+                        example: EMAIL_PASSWORD
+                      role:
+                        type: string
+                        example: ADMIN
+                      updatedAt:
+                        type: string
+                        example: '2023-06-30T06:42:26.247Z'
+                  message:
+                    type: string
+                    example: >-
+                      Users registered successfully and verification email has
+                      been sent on your email.
+                  success:
+                    type: boolean
+                    example: true
+              examples:
+                Register user:
+                  value:
+                    user:
+                      __v: 0
+                      _id: 649e795264e7dba29b726936
+                      avatar:
+                        publid_id: 649e795264e7dba29b726935
+                        url: https://via.placeholder.com/200x200.png
+                      createdAt: '2023-06-30T06:42:26.163Z'
+                      phone: '+2345600909'
+                      email: user.email@domain.com
+                      name: doejohn
+                      isVerified: false
+                      loginType: EMAIL_PASSWORD
+                      role: User
+                      updatedAt: '2023-06-30T06:42:26.247Z'
+                    message: >-
+                      Users registered successfully and verification email has
+                      been sent on your email.
+                    success: true
+
 tags:
-    - name: 🔐 Authentication
-      description: >-
-        This section encompasses all the APIs related to user authentication.
-    - name: 👨‍💼 Individual
-      description: >-
-        This section encompasses all other APIs related to individual.
-    - name: 🏫 Company
-      description: >-
-        This section encompasses all other APIs related to company.
-    - name: 👨‍👩‍👧‍👦 Staff
-      description: >-
-        This section encompasses all other APIs related to staff.
-    - name: 👩🏻‍🏫 Guest
-      description: >-
-        This section encompasses all other APIs related to guest.
-    - name: 👨‍💼 Pipopro Admin
-      description: >-
-        This section encompasses all other APIs related to admin and app management.
-    - name: 💸 Payment
-      description: >-
-        This section encompasses all other APIs related to subscriptions, payments and transactions.
-    - name: 🔄 General
-      description: >-
-        This section encompasses all other APIs.
-  
+  - name: 🔐 Authentication
+    description: >-
+      This section encompasses all the APIs related to user authentication.
+  - name: 👨‍💼 Individual
+    description: >-
+      This section encompasses all other APIs related to individual.
+  - name: 🏫 Company
+    description: >-
+      This section encompasses all other APIs related to company.
+  - name: 👨‍👩‍👧‍👦 Staff
+    description: >-
+      This section encompasses all other APIs related to staff.
+  - name: 👩🏻‍🏫 Guest
+    description: >-
+      This section encompasses all other APIs related to guest.
+  - name: 👨‍💼 Pipopro Admin
+    description: >-
+      This section encompasses all other APIs related to admin and app management.
+  - name: 💸 Payment
+    description: >-
+      This section encompasses all other APIs related to subscriptions, payments and transactions.
+  - name: 🔄 General
+    description: >-
+      This section encompasses all other APIs.
